# kampanile3

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.config/: .markdownlint.yaml  .yamlfmt.yaml
.github/: dependabot.yml
.github/workflows/: dependabot.yml  django.yml  main.yml  pre-commit.yml
carillon/: README.md  carillon.organ
deployment/: README.md  grandorgue.desktop  gunicorn.service.sample  kampanile3.sample
kampanile3/: gunicorn.conf.py  manage.py  package-lock.json  package.json
kampanile3/carillon/: admin.py  apps.py  forms.py  signals.py  test.py  urls.py  widgets.py
kampanile3/carillon/conditions/: __init__.py  and_condition.py  not_condition.py  test.py  time_condition.py
kampanile3/carillon/fixtures/: sample.yaml  songs.yaml
kampanile3/carillon/lib/: __init__.py
kampanile3/carillon/migrations/: 0001_initial.py  0002_carillon_default.py  0002_carillon_volume.py  0002_rule.py  0003_alter_rule_options_alter_rule_priority_and_more.py  0003_alter_song_name.py  0003_rule_repeat.py  0004_carillon_active.py  0004_remove_song_tempo_song_tempo_multiplier.py  0005_carillon.py  0006_alter_carillon_options.py  0007_striker_rule_striker.py  0008_alter_rule_striker.py  0009_striker_priority.py  0010_striker_check_type.py
kampanile3/carillon/models/: __init__.py  carillon.py  rule.py  song.py  striker.py
kampanile3/carillon/songs/: .gitignore  (+13 more)
kampanile3/frontend/: context_preprocessors.py  forms.py  urls.py  views.py
kampanile3/gpio/: apps.py  forms.py  models.py  signals.py  test.py  urls.py  views.py
kampanile3/kampanile3/: asgi.py  settings.py  urls.py  wsgi.py
kampanile3/mqtt/: apps.py  urls.py
requirements/: development-requirements.txt  production-requirements.txt
(+86 files in other folders)
