[project]
name = "kampanile3"
version = "0.0.1a1.dev1"
description = "A customizable chime with web interface."
keywords = ["kampanile", "chime", "bell", "ring", "midi"]
dependencies = [
  "mido",
  "python-rtmidi",
  "django",
  "django-split-settings",
  "django-npm",
  "django-crispy-forms",
  "crispy-bootstrap5",
  "directorium",
]

[project.optional-dependencies]
development = [
  "pre-commit",
]

[[project.authors]]
name = "Matthias Gianfelice"
email = "matthias@gianfelice.de"

[[project.maintainers]]
name = "Matthias Gianfelice"
email = "matthias@gianfelice.de"

[project.urls]
Repository = "https://github.com/MatthiasGi/kampanile3"
