[project]
name = "kampanile3"
version = "0.0.1a1.dev1"
description = "A customizable chime with web interface."
keywords = ["kampanile", "chime", "bell", "ring", "midi"]
dependencies = [
  "mido",
  "python-rtmidi",
  "ha-mqtt-discoverable",
  "django",
  "django-split-settings",
  "django-npm",
  "django-crispy-forms",
  "crispy-bootstrap5",
  "directorium",
  "Adafruit-Blinka",
  "adafruit-circuitpython-debouncer",
  "schedule",
]

[project.optional-dependencies]
development = [
  "pre-commit",
]

production = [
  "gunicorn",
]

rpi = [
  "kampanile3[production]",
  "RPi.GPIO",
]

[[project.authors]]
name = "Matthias Gianfelice"
email = "matthias@gianfelice.de"

[[project.maintainers]]
name = "Matthias Gianfelice"
email = "matthias@gianfelice.de"

[project.urls]
Repository = "https://github.com/MatthiasGi/kampanile3"

[build-system]
requires = ["setuptools >= 42.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
